[package]
name = "prayterm"
version = "0.1.0" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "realtime play nonblocking terminal for Rust with crossterm"
keywords = ["stdout", "stdin", "crossterm", "console"]
categories = ["development-tools", "game-development", "command-line-utilities", "command-line-interface"]
license = "MIT"

documentation = "https://docs.rs/prayterm/"
homepage = "https://crates.io/crates/prayterm"
repository = "https://github.com/nomissbowling/prayterm"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0" }

# crossterm = { version = "0.27.0", features = ["event-stream"] }
# crossbeam-channel = "0.5.12"
